@@ -718,6 +718,7 @@
     - improved error reporting of report type 4 (speed)
     - fixed incorrect "executed" count in the summary when "use_autosave" is set to "1"
     - added "executed with autosave" counter to summary
+    - fixed/improved output when "wiki_format" is set to "2"
 
     create_image_xml
     - fixed some CLion inspection warnings
